--- a/src/sass/components/_scrollbar.scss
+++ b/src/sass/components/_scrollbar.scss
@@ -4,17 +4,17 @@
     * {
         --_scrollbar-track-bg: transparent;
 
-        --_scrollbar-bg: var(--scrollbar-track-bg-color);
+        --_scrollbar-bg: var(--_scrollbar-track-bg);
         --_scrollbar-border-radius: 100vmax;
-        --_scrollbar-width: 10px;
+        --_scrollbar-width: 5px;
         --_scrollbar-moz-width: thin;
         --_scrollbar-margin-block: 0px;
 
-        --_scrollbar-thumb-border: 3px solid var(--bg-primary);
+        --_scrollbar-thumb-border: 0px solid var(--bg-primary);
 
-        --_scrollbar-thumb-bg: var(--scrollbar-thumb-bg-color);
-        --_scrollbar-thumb-bg-hover: var(--scrollbar-thumb-bg-color);
-        --_scrollbar-thumb-bg-active: var(--scrollbar-thumb-bg-color);
+        --_scrollbar-thumb-bg: var(--color-primary);
+        --_scrollbar-thumb-bg-hover: var(--color-primary);
+        --_scrollbar-thumb-bg-active: var(--color-primary);
 
         &::-webkit-scrollbar {
             background-color: var(--_scrollbar-bg);
@@ -51,11 +51,17 @@
             border-top: none;
             border-left: none;
         }
+
     }
 
     // FIX: Move the Firefox scrollbar styling inside this selector
-    @supports (scrollbar-color: var(--_scrollbar-thumb-bg) var(--_scrollbar-bg)) {
+    @supports (scrollbar-color: black white) and (not selector(::-webkit-scrollbar)) {
         * {
+            --_scrollbar-bg: transparent;
+            --_scrollbar-thumb-bg: var(--bg-secondary);
+            --_scrollbar-thumb-bg-hover: var(--bg-secondary);
+            --_scrollbar-thumb-bg-active: var(--bg-secondary);
+
             scrollbar-width: var(--_scrollbar-moz-width);
             scrollbar-color: var(--_scrollbar-thumb-bg) var(--_scrollbar-bg);
         }
