--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -6,8 +6,9 @@ html {}
     --s: 76px;
     /* control the size */
 
-    --c: #1a144a;
+    --c: var(--bg-primary);
     --_g: conic-gradient(var(--c) 25%, #0000 0) 0 0;
+
     background:
         var(--_g)/calc(2*var(--s)) calc(var(--s)/9.5),
         var(--_g)/calc(var(--s)/9.5) calc(2*var(--s)),
@@ -20,8 +21,39 @@ html {}
     @include center-flex-column;
     justify-content: flex-start;
 
+    &__error-section {
+        min-height: 0;
+
+        display: grid;
+        grid-template-rows: 0fr;
+
+        transition: grid-template-rows 500ms ease-out;
+
+        &:has(.index__title-2--error) {
+            grid-template-rows: 1fr;
+        }
+    }
+
+    &__wrapper {
+        overflow: hidden;
+    }
+
+    &__title-2 {
+        font-size: 18px;
+        text-wrap: balance;
+
+
+        &--error {
+            text-align: center;
+            padding: 25px;
+
+            color: red;
+            background-color: color-mix(in oklab, currentColor, transparent 90%);
+        }
+    }
+
     &__options {
-        background-color: var(--bg-primary);
+        backdrop-filter: blur(25px);
 
         @include center-flex-column(25px);
 
@@ -56,6 +88,10 @@ html {}
             display: flex;
             justify-content: space-between;
             gap: 15px;
+
+            @include mobile-only {
+                flex-direction: column;
+            }
         }
     }
 
@@ -70,6 +106,7 @@ html {}
 
         padding: 5px;
 
+        background-color: color-mix(in oklab, black, transparent);
 
         overflow-y: auto;
 
@@ -80,6 +117,8 @@ html {}
 
     &__sentences {
         margin-bottom: 25px;
+
+        color: white;
 
         &:last-child {
             margin-bottom: 0;
@@ -99,7 +138,6 @@ html {}
         transition: filter 250ms ease-in-out;
 
         flex: 1;
-
 
         &:hover {
             filter: brightness(85%);
